fix: remove overflow in reviews

--- a/docs/src/landing/css/reactive-kitten.webflow.css
+++ b/docs/src/landing/css/reactive-kitten.webflow.css
@@ -1160,13 +1160,13 @@
 }
 
 .div-block-45 {
-  overflow: scroll;
+  overflow: hidden;
   height: 100%;
   padding: 16px 24px;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
-  flex: 1;
+  flex: 1 0 auto;
 }
 
 .image-21 {
